<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/indigo_daisy"
        android:text="@string/profile_creation"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/profile_instruction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />


    <TextView
        android:id="@+id/tv_subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_instruction2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@id/tv_logo"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/et_name"
        android:layout_height="50dp"
        android:hint="@string/first_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp"
        app:layout_constraintRight_toRightOf="@id/tv_subtitle"
        android:inputType="textPersonName"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/custom_et"
        android:textSize="15sp"
        app:layout_constraintVertical_bias="0.27"
        android:layout_width="300dp"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/email_address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp"
        app:layout_constraintRight_toRightOf="@id/tv_subtitle"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textEmailAddress"
        app:layout_constraintVertical_bias="0.37"
        android:background="@drawable/custom_et"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/enter_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp"
        app:layout_constraintRight_toRightOf="@id/tv_subtitle"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        app:layout_constraintVertical_bias="0.47"
        android:background="@drawable/custom_et"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_website"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/website"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp"
        app:layout_constraintRight_toRightOf="@id/tv_subtitle"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textWebEditText"
        app:layout_constraintVertical_bias="0.57"
        android:background="@drawable/custom_et"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_height="50dp"
        android:layout_width="300dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_btn"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp"
        app:layout_constraintRight_toRightOf="@id/tv_subtitle"
        app:layout_constraintVertical_bias="0.8" />

    <!--<TextView
        android:id="@+id/move_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/signin"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />-->

</androidx.constraintlayout.widget.ConstraintLayout>